# macro-cycles

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
apps/api/: main.py  models.py  run.py
apps/web/: next.config.ts  package-lock.json  package.json
apps/web.bak/: package-lock.json  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/backtests/: page.tsx
apps/web/src/app/drivers/: page.tsx
apps/web/src/app/explain/: page.tsx
apps/web/src/app/markets/: page.tsx
apps/web/src/app/note/: page.tsx
apps/web/src/app/turning-points/: page.tsx
apps/web/src/components/: CommandPalette.tsx  CompositeChart.tsx  CompositeMethodToggle.tsx  DashboardLegend.tsx  ExecutivePillars.tsx  Heatmap.tsx  HorizonToggle.tsx  MetaStrip.tsx  NavBar.tsx  PillarDeepDive.tsx  RegimeLegend.tsx  Waterfall.tsx
apps/web/src/components/viz/: ChartFrame.tsx  DataGrid.tsx  KPI.tsx  MacroDial.tsx  PillarBars.tsx  PillarContribTS.tsx  RecessionGauge.tsx
apps/web/src/lib/: api.ts  num.ts  regimes.ts  stateColors.ts  types.ts
config/: composite.yaml  indicators.yaml  pillars.yaml  sources.yaml
libs/py/: asof_utils.py  config_loader.py  indicators.py  vintage.py
orchestration/flows/: backtest_skeleton.py  build_composite.py  build_composite_asof.py  build_indicators.py  build_pillars.py  build_pipeline.py  build_regimes.py  business_hmm.py  dq_checks.py  dq_write.py  explainability.py  ingest_alfred.py  ingest_demo.py  ingest_sources.py  market_hmm.py  monthly_note.py
orchestration/models/: recession_probit.py
tests/: test_api_health.py
